edit summary shortcode

--- a/layouts/shortcodes/detailsumary.html
+++ b/layouts/shortcodes/detailsumary.html
@@ -2,9 +2,9 @@
     <summary>
         {{ .Get "title" }}
     </summary>
-    <code>
-     {{ .Inner }}   
-    </code>
+
+    {{ .Inner | markdownify | emojify }}
+
 
 
 </details>
